lab1/Test/L1-A-13-11.output
Error Type B at Line 4
Error Type B at Line 5
Error Type B at Line 18
Error Type A at Line 22
Error Type A at Line 30
Error Type A at Line 38
Error Type B at Line 42
