lab1/Test/L1-A-13-11.cmm
int q8xe1DjEJ3qnrbi3aA1s ( ) {
  {
    struct B9uJwOYdSK k [ 1912487962 ] ;
  }* 
 }
float ;
int ;
int ;
struct {
  int UlqEO5D_x , TwwGC_rnNgDxa5w = OfFiRS || fmxy0jqTmSSO04KaY3 
    && NzN8 + ! VdWe [ iaUlRPiF41CDcOQMcEaw = JzWJZco2lkgxl2 
    >= OwLVvuPiKg_e2jI - O1UZfU8K0gx6y18c / - jrjQxzpiaxdYK 
    ( rfHC8 , d8W9w = Y8NH != gO5qb8vfMA_5zoHVf - WvrRTbzytNW9 
    [ gmalh0E7u507 || hd <= ( SA56Q_tc1 < lJA8Y6yu0SYK 
    + dMYJ * ufNAAVtnuPljmI ( zuEgQXXZF277Ap > GFAjFIeLiP3QQ 
    / ! yMh7w5qi9mreUl0do ( kI6ZtfPKOweMz3YQZP9 = cAN_Yv876m 
    || azJFzq / 106409252 . FD ) . eK3I * - 1224602062.1984215414 
    ) . diA ) ] == qacNq ( ) * ) ] . y ;
}zpDyUnv , WUP3HHasMU1dAshz 

;
int I0zxaO ( int FkqjWhX3fOkwh8d6 , int :Zd0oO9Sh9Y 
  ) {
  struct {
    int J9C9L ;
    struct {
      struct AB8_2m_Q_EE5R {
      }hoIE5X ;
      struct hr9xMQIPAfliNvMjmRB r9HM_7Oto ;
    }m #;
    int wHRgmvkPBmoR ;
    struct n57YXHZ2Xy p8NSEFwXGU ;
  }BxauVs1km3Y1HE ;
  int IGlcfIbiz6cjW3_iSj ;
}
int fJiGzdT ( ) {
}
int #;
int pjrBTJiT ( ) {
}
int ;
int D3oxv9EVV3SvngadWb ( ) }
int Q6efw ( ) {
  if ( mBiefAdL3H7pwUrhcLo )   while ( pwp5rb9tozYw38 
    )   if ( NaqG0gsfpa6XjSL044k )   q_94s9OBbvIgZfWj0 
    ;
else   return r_xgd_MFgRB_ETeGt0QD ;



}
int YeXcJpQG ( ) {
}
int ;
int ZegXv ( ) {
  _FEO0k60Bsz3X ;
  vH5vII0LN6bkWQdTF ;
  if ( EjONW3It5kKU )   if ( VR )   E4EhAkZwCK ;
else {
    if ( c ) {
      GN07yQd5 ;
      wrgTpzedMY1oLC5cQGHI ;
      Cow ;
      BhGtP53aTBsoCIZpzS ;
      if ( dD_ )       YGJe0fS7Zgf1 ;
else       if ( _d )       P1 ;


    }else     if ( zURuhtzVBTo )     vfHq3Iy5jVcvJ70Dhs 
      ;
else     z3rrpvdnDcukse5azc ;


{
    }    IsB9eK3Q3zTIo ;
  }
else   x ;

  Yk39UgKxZkUoCEyn2Ub ;
}
